--- a/hint3.html
+++ b/hint3.html
@@ -42,7 +42,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">問題文をもう一度見てみよう</p>
+              <p class="card__content">時計の「時間」</p>
             </div>
               
  <!-- 3-2ヒント追加
@@ -63,7 +63,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">答え<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">えええ</p>
+              <p class="card__content">1</p>
             </div>
 
  <!-- 3-2答え追加
