--- a/main.html
+++ b/main.html
@@ -33,9 +33,10 @@
         <!-- STAGE1問題セクション　ここから -->
         <section class="section">
           <div class="container">
-            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>さぁゲームを始めよう！</h2>
-            <p class="text-center">まずは、この学校の家庭科室の鍵のありかを知らなければ入ることができない。<br>
-              下の画像の謎を解き、鍵のありかをキーワード欄に入力しよう。</p>
+            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>彼をこの部屋から出すために協力しよう</h2>
+            <p class="text-center">同時視聴を増やす為に拡散してみたがある一定の数を過ぎるとどうも増えなくなった、どうやらこの配信を見れる人数に制限があるみたいだ。<br>
+制限を解除するには謎を解かなければいけないみたいだ、彼と視聴者と協力して謎を解こう<br>
+              下の画像の謎を解き、答えをキーワード欄に入力しよう。</p>
             <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
   
             <div class="container">
@@ -85,9 +86,9 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：１  クリア！</div>
-              <div class="clear-message__content">家庭科室の扉が開いた！<br>
-                さぁ先生を助けるため<br>
-                ３つステージの謎をとき、暗号を見つけ出そう！</div>
+              <div class="clear-message__content">謎を解くことに成功し同時視聴を増やす事ができた！                                                                     <br>
+                これで分かりやすいヒントがわかるはずだ！<br>
+                残りの謎を解こう！  </div>
               <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
@@ -106,10 +107,9 @@ Youtube貼り付けここまで -->
         <section>
           <div class="section">
             <div class="container">
-              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>黒板に書かれている謎を解け！</h2>
-              <p class="text-center">家庭科室に入ることができた！<br>
-                すぐに目に入ったのは黒板にある４つの謎。<br>
-                これらを解くことで、きっと次のステップに繋がるはずだ！</p>
+              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>事件発生</h2>
+              <p class="text-center">次の謎を解こうとしたところでチャットが打てなくなり先程まで沢山の文字が見えなくなった<br>彼をサポートするために彼と協力してチャットの制限を解こう！<br>
+               
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
