--- a/final.html
+++ b/final.html
@@ -17,14 +17,13 @@
   </header>
   <main class="main final-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/main-image.png" alt="封鎖された家庭科室からの脱出"></h1>
+    <h1 class="main-title"><img src="assets/images/main-image.png" alt="ある配信からの救出"></h1>
     <!-- タイトルエリア　ここまで -->
     <section class="section">
       <div class="container">
         <div class="box bg-color--subcolor">
-          <h2 class="section-title--border">全ステージ クリア！</h2>
-          <p class="text-center">おめでとう！あなたはついに全ての謎を解き、先生を救うことができた！<br>
-            そして先生からあるメッセージが伝えられた・・・</p>
+          <h2 class="section-title--border">全問題クリア！！！</h2>
+          <p class="text-center">見事、謎を解き、終わった配信、、、</p>
         </div>
       </div>
     </section>
@@ -44,10 +43,10 @@ Youtube貼り付けここまで-->
           ß
       </div>
          -->
-        <p class="text-center">あなたはきっと、このメッセージをずっと忘れることはないだろう・・・。<br>
-          これからも家庭科室が封鎖されるようなことがあったら、<br>
-          この教訓をしっかり思い出してくれ。</p>
-        <p class="text-center">それでは、また会おう！</p>
+        <p class="text-center">無事、配信も終わり、<br>
+          プレイヤーは誰かを助けることはいいことだと思い<br>
+          誰かを助ける職につくことにしました。</p>
+        <p class="text-center">頑張って！プレイヤーくん！</p>
       </div>
     </section>
     <section class="section bg-color--keycolor">
@@ -64,9 +63,9 @@ Youtube貼り付けここまで-->
           <div class="column">
             <div class="card">
               <h3 class="card__title">このゲームの企画者</h3>
-              <p class="card__content">企画・制作メンバーの紹介など。<br>
-                テキストテキストテキストテキストテキストテキストテキスト<br>
-                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+              <p class="card__content">及川いずみ<br>
+                平山輝<br>
+          𠮷岡志起</p>
             </div>
           </div>
         </div>
