--- a/final.html
+++ b/final.html
@@ -64,7 +64,7 @@ Youtube貼り付けここまで-->
             <div class="card">
               <h3 class="card__title">このゲームの企画者</h3>
               <p class="card__content">及川いずみ<br>
-                平山輝<br>
+                平川輝<br>
           𠮷岡志起</p>
             </div>
           </div>
