--- a/hint3.html
+++ b/hint3.html
@@ -42,7 +42,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">時計の「時間」</p>
+              <p class="card__content">一日の「時間」</p>
             </div>
               
  <!-- 3-2ヒント追加
