--- a/main.html
+++ b/main.html
@@ -108,7 +108,7 @@ Youtube貼り付けここまで -->
           <div class="section">
             <div class="container">
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>事件発生</h2>
-              <p class="text-center">次の謎を解こうとしたところでチャットが打てなくなり先程まで沢山の文字が見えなくなった<br>彼をサポートするために彼と協力してチャットの制限を解こう！<br>
+              <p class="text-center">次の謎を解こうとしたところでチャットが打てなくなり先程までの沢山の文字が見えなくなった<br>彼をサポートするために彼と協力してチャットの制限を解こう！<br>
                
             </div>
           </div>
