--- a/main.html
+++ b/main.html
@@ -108,7 +108,7 @@ Youtube貼り付けここまで -->
           <div class="section">
             <div class="container">
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>事件発生</h2>
-              <p class="text-center">次の謎を解こうとしたところでチャットが打てなくなり先程までの沢山の文字が見えなくなった<br>彼をサポートするために彼と協力してチャットの制限を解こう！<br>
+              <p class="text-center">視聴制限が解除されたから他の謎も解いていこう！<br>
                
             </div>
           </div>
@@ -182,7 +182,7 @@ Youtube貼り付けここまで -->
             <div class="clear-message">
               <div class="clear-message__title">STAGE：2　クリア！</div>
               <div class="clear-message__content">
-                無事、チャットの制限が解けた！</div>
+                残りの謎も解いていこう！</div>
                 <button v-on:click="nextStage('stage2')" onclick="location.href='#sectionStage3'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
@@ -197,9 +197,9 @@ Youtube貼り付けここまで -->
         <!-- STAGE3-1問題セクション　ここから -->
         <section class="section">
           <div class="container">
-            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>最後の問題</h2>
+            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>STEGE3の問題</h2>
             <p class="text-center">
-              これを解けば救出成功！</p>
+             次の謎を解こうとしたところでチャットが打てなくなり先程までの沢山の文字が見えなくなった<br>彼をサポートするために彼と協力してチャットの制限を解こう！</p>
             <figure class="image__container">
               <img src="assets/images/三問目.png" alt="">
             </figure>
@@ -216,7 +216,7 @@ Youtube貼り付けここまで -->
               v-on:answer-input="answerInput($event, 'stage3', 1, 'final')" は送信ボタンをクリックした時の動作を決める関数です。
               4番目の引数 'final' は最終ステージを表します。
             ------------------------------------------------------------------------------------------------------------------>
-            <answer-input v-bind:correct="correctAnswer['stage3']['q1']" v-on:answer-input="answerInput($event, 'stage3', 1, 'final')"></answer-input>
+            <answer-input v-bind:correct="correctAnswer['stage3']['q1']" v-on:answer-input="answerInput($event, 'stage3', 1, 'stage4')"></answer-input>
             <a class="link-hint" href="hint3.html" target="hint3">ヒントをみる ></a>
           </div>
         </section>
@@ -268,6 +268,34 @@ STAGE3-3追加　ここまで -->
           
       </div>
       <!-- STAGE3　ここまで -->
+       <!-- STAGE4-1問題セクション　ここから -->
+        <section class="section">
+          <div class="container">
+            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：4</span>最後の問題</h2>
+            <p class="text-center">
+              これを解けば救出成功！</p>
+            <figure class="image__container">
+              <img src="assets/images/4問目.png" alt="">
+            </figure>
+          </div>
+        </section>
+        <!-- STAGE4-1問題セクション　ここまで -->
+
+        <!-- STAGE4-1解答入力セクションここから -->
+        <section class="section bg-color--keycolor">
+          <div class="container">
+            <h2 class="section-title"><span class="section-title__stage">STAGE：3</span>キーワードを入力</h2>
+            <!-----------------------------------------------------------------------------------------------------------------
+              解答入力欄のコンポーネントです。
+              v-on:answer-input="answerInput($event, 'stage3', 1, 'final')" は送信ボタンをクリックした時の動作を決める関数です。
+              4番目の引数 'final' は最終ステージを表します。
+            ------------------------------------------------------------------------------------------------------------------>
+            <answer-input v-bind:correct="correctAnswer['stage4']['q1']" v-on:answer-input="answerInput($event, 'stage4', 1, 'final')"></answer-input>
+            <a class="link-hint" href="hint4.html" target="hint4">ヒントをみる ></a>
+          </div>
+        </section>
+        <!-- STAGE4-1解答入力セクション　ここまで -->
+
 
     </div>
   </main>
