--- a/hint2.html
+++ b/hint2.html
@@ -23,7 +23,7 @@
   </header>
   <main class="main hint-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/aaaaaaa.png" alt="ある配信からの救出"></h1>
+    <h1 class="main-title"><img src="assets/images/あああ.png" alt="ある配信からの救出"></h1>
     <!-- タイトルエリア　ここまで -->
     <section class="section">
       <div class="container">
