--- a/final.html
+++ b/final.html
@@ -17,7 +17,7 @@
   </header>
   <main class="main final-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/最後.png" alt="ある配信からの救出"></h1>
+    <h1 class="main-title"><img src="assets/images/あああ.png" alt="ある配信からの救出"></h1>
     <!-- タイトルエリア　ここまで -->
     <section class="section">
       <div class="container">
@@ -30,7 +30,7 @@
     <section class="section">
       <div class="container">
           <figure class="image__container">
-             <img src="assets/images/stage.png" alt="">
+             <img src="assets/images/最後.png" alt="">
           </figure>
 
 <!--  YouTube貼り付け
